// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deserialize and serialize mix of break tags and new lines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "a
",
      },
      Object {
        "break": true,
        "children": Array [
          Object {
            "text": "",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "text": "https://a.com",
          },
        ],
        "link": "https://a.com",
        "type": "link",
      },
      Object {
        "text": "
",
      },
      Object {
        "break": true,
        "children": Array [
          Object {
            "text": "",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "e",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`Deserialize heading with new line 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "heading one",
      },
    ],
    "type": "heading_one",
  },
  Object {
    "break": true,
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "Foo",
      },
    ],
    "type": "paragraph",
  },
]
`;
